--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-server"></i></div>
               <h4 class="title"><a href="">Hosting</a></h4>
               <p class="description">Why not consolodate all your web needs under one roofand make having a website easy. Ask us about our economic hosting plans!</p>
             </div>
@@ -125,7 +125,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-search-alt"></i></div>
               <h4 class="title"><a href="">Search Ranking</a></h4>
               <p class="description">Our search engine optimization package is geared towards ranking your business higher on popular search engines.</p>
             </div>
@@ -133,7 +133,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-blue">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class="bx bxs-camera"></i></div>
               <h4 class="title"><a href="">Photography</a></h4>
               <p class="description">We specialize in presenting high quality images. Our team does on sight aerial and portrait photography! Let's showcase your business.</p>
             </div>
