--- a/services.html
+++ b/services.html
@@ -123,7 +123,7 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img">
-                <img src="img/service-details-1.jpg" alt="...">
+                <img src="img/service-details-1.svg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Our Mission</a></h5>
@@ -135,7 +135,7 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img">
-                <img src="img/service-details-2.jpg" alt="...">
+                <img src="img/service-details-2.svg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Our Plan</a></h5>
@@ -159,7 +159,7 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img">
-                <img src="img/service-details-3.jpg" alt="...">
+                <img src="img/service-details-3.svg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Our Vision</a></h5>
@@ -171,7 +171,7 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img">
-                <img src="img/service-details-4.jpg" alt="...">
+                <img src="img/service-details-4.svg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Our Care</a></h5>
