--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form id="contact" method="post" role="form" class="php-email-form" data-netlify="true">
+            <form id="contact" action="/thank.html" method="post" role="form" data-netlify="true">
               <div class="form-row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -124,9 +124,6 @@
               <div class="form-group">
                 <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                 <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="error-message"></div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
